// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`visitDepMap() circular 1`] = `
Object {
  "/a": Set {
    "default",
    "b",
  },
  "/b": Set {
    "c",
    "default",
  },
  "/c": Set {
    "a",
    "default",
  },
}
`;

exports[`visitDepMap() export from 1`] = `
Object {
  "/a": Set {
    "default",
  },
  "/index": Set {
    "a",
  },
}
`;

exports[`visitDepMap() import all 1`] = `
Object {
  "/a": Set {
    "default",
  },
  "/b": Set {
    "a",
    "default",
  },
  "/c": Set {
    "b",
    "default",
  },
}
`;

exports[`visitDepMap() import default simple 1`] = `
Object {
  "/a": Set {
    "default",
  },
  "/b": Set {
    "a",
    "default",
  },
  "/c": Set {
    "b",
    "default",
  },
}
`;

exports[`visitDepMap() import multiples 1`] = `
Object {
  "/a": Set {
    "default",
  },
  "/b": Set {
    "a",
    "default",
  },
  "/c": Set {
    "b",
    "c1",
    "c2",
  },
  "/d": Set {
    "c1",
    "default",
  },
  "/e": Set {
    "c1",
    "default",
  },
}
`;
